add vtkfortran submodule; do not yet used, only compiled

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = src/third_party/json-fortran
 	url = https://github.com/jacobwilliams/json-fortran
   branch = master
+[submodule "src/third_party/VTKFortran"]
+	path = src/third_party/VTKFortran
+	url = https://github.com/szaghi/VTKFortran
+  branch = master
