move third party submodule repositories outside src

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "src/third_party/json-fortran"]
-	path = src/third_party/json-fortran
+	path = third_party/json-fortran
 	url = https://github.com/jacobwilliams/json-fortran
   branch = master
-[submodule "src/third_party/VTKFortran"]
-	path = src/third_party/VTKFortran
+[submodule "third_party/VTKFortran"]
+	path = third_party/VTKFortran
 	url = https://github.com/szaghi/VTKFortran
   branch = master
