--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ addons:
 
 env:
   global:
-    - MAKECOVERAGE="FoBiS.py rule -ex makecoverage"
+    # - MAKECOVERAGE="FoBiS.py rule -ex makecoverage"
+    - MAKECOVERAGE="echo to re-insert"
     - MAKEDOC="./makedoc.sh francescosalvadore/openpde"
 
 before_install:
