--- a/.travis.yml
+++ b/.travis.yml
@@ -14,15 +14,14 @@ addons:
     sources:
       - ubuntu-toolchain-r-test
     packages:
-      - gfortran-6
+      - gfortran-7
       - binutils
       - python-pip
       - graphviz      
 
 env:
   global:
-    # - MAKECOVERAGE="FoBiS.py rule -ex makecoverage"
-    - MAKECOVERAGE="echo to re-insert"
+    - MAKECOVERAGE="FoBiS.py rule -ex makecoverage"
     - MAKEDOC="./makedoc.sh francescosalvadore/openpde"
 
 before_install:
@@ -34,10 +33,10 @@ install:
       mkdir "$HOME/.local/bin"
     fi
   - export PATH="$HOME/.local/bin:$PATH"
-  - export FC=/usr/bin/gfortran-6
-  - ln -fs /usr/bin/gfortran-6 "$HOME/.local/bin/gfortran" && gfortran --version
-  - ls -l /usr/bin/gfortran-6
-  - ln -fs /usr/bin/gcov-6 "$HOME/.local/bin/gcov" && gcov --version
+  - export FC=/usr/bin/gfortran-7
+  - ln -fs /usr/bin/gfortran-7 "$HOME/.local/bin/gfortran" && gfortran --version
+  - ls -l /usr/bin/gfortran-7
+  - ln -fs /usr/bin/gcov-7 "$HOME/.local/bin/gcov" && gcov --version
   - pip install --user --upgrade pygooglechart
   - pip install --user --upgrade graphviz
   - pip install --user --upgrade FoBiS.py
